# Hermeneia

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONSTITUTIONAL_COMPLIANCE.md  CONTRIBUTING.md  EPISTEMIC_BACKLOG.md  IMPLEMENTATION_STATUS.md  LICENSE  PHILOSOPHY.md  PROJECT_AXIOMS.md  QUESTION_DEPENDENCY_GRAPH.md  RATIFICATION.md  README.md  RESEARCH_QUESTIONS.md  SPECIFICATION_STATUS.md  VISION.md  pyproject.toml  requirements.txt
.claude/: launch.json
constitutional_audits/: 2026-06-20-v1.0.0-ratified.md  README.md  TEMPLATE.md
corpora/: README.md  corpus_index.json  gatsby.herm.README.md  manifest.schema.md
docs/: 00_Constitution.md  01_Authority_Index.md  01_problem_statement.md  02_Constitutional_Invariants.md  02_core_thesis.md  03_Constitution.md  04_Invariants.md  05_Architecture.md  06_Ontology.md  07_First_Principles.md  08_epistemology.md  09_hermeneutic_field.md  10_perspectives.md  11_transformation_planner.md  12_narrative_compiler.md  13_human_stewardship.md  14_metrics.md  15_Storage.md  16_Observation_Compiler.md  17_glossary.md  18_roadmap.md  Architecture_Patterns.md  Architecture_Proofs.md  Critic_Ecology.md  FUTURE_ARCHITECTURE_NOTES.md  Infrastructure_Engineering_Track.md  Infrastructure_Gap_Analysis_v1.md  Interpretive_Divergence_Projection_Design.md  Preservation_Layer_Design.md  What_Hermeneia_Is.md  application-systems-thinking.md  explorer_calibration_report.md  explorer_phase1_release_note.md  hermeneia_research_program_map.md  what-is-hermeneia.md
examples/: gatsby_interpretive_divergence.json
hermeneia/: LICENSE  (+4 more)
(+304 files in other folders)
